# flubar

./: .envrc  .gitignore  README.md  analysis_options.yaml  build.py  flake.nix  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml
lib/: main.dart
lib/app/: app.dart  constants.dart  talker.dart
lib/app/settings/: constants.dart  providers.dart  util.dart
lib/app/storage/: providers.dart
lib/app/window/: constants.dart  init.dart
lib/models/cancel_token/: cancel_token.dart
lib/models/exceptions/: ffmpeg_exception.dart
lib/models/extensions/: cli_command.dart  data_reader.dart  ffmpeg_command.dart  metadata_extension.dart  properties_extension.dart  uint8list_extension.dart
lib/models/ffmpeg/: cli.dart  ext.dart
lib/models/isolate/: mixin.dart
lib/models/state/: advanced_column_state.dart  common_metadata.dart  common_properties.dart  metadata_backup.dart  playlist.dart  settings.dart  storage.dart  track.dart  track_cover.dart
lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/ui/: constants.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: .gitignore  Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: cue.rs  ffmpeg.rs  id3.rs  lofty.rs  mod.rs  models.rs  symphonia.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flubar.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flubar.podspec
rust_builder/windows/: CMakeLists.txt
(+80 files in other folders)
