[package]
name = "rust_lib_flubar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.93"
lofty = "0.21.1"
id3 = "1.14.0"
ffmpeg-next = { version = "7.1.0", features = ["codec"] }
infer = "0.16.0"
cue = { git = "https://github.com/AyaseFile/libcue.rs" }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
